--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,120 @@
     <div class="py-6 px-8 text-xl">
         <p>Welcome back, Hitesh!</p>
     </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+   
+    <title>Dashboard</title>
+</head>
+<body>
+<div class="flex pt-16">
+<div class="bg-slate-100 h-64 w-80 grid grid-cols-1 rounded-lg">
+    <button class=" text-left pl-5 pt-3 tracking-widest border-b-2 ">PDF</button>
+    <button class=" text-left pl-5 pt-3 tracking-widest border-b-2">MARKSHEET</button>
+    <button class=" text-left pl-5 pt-3 tracking-widest border-b-2">CERTIFICATE</button>
+    <button class=" text-left pl-5 pt-3 tracking-widest border-b-2">PREVIOUS YEAR PAPERS</button>
+    <button class=" text-left pl-5 pt-3 tracking-widest ">IMPORTANT LINKS</button>
+</div>
+
+    <section class="text-gray-600 body-font">
+    <div class="container px-5 ">
+        <div class="flex flex-wrap -m-4">
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/420x260">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/421x261">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/422x262">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/423x263">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/424x264">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/425x265">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/427x267">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/428x268">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+            <div class="lg:w-1/3 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="https://dummyimage.com/427x267">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+</div>
+</body>
+</html>
+
+
+
+
 
     {% include 'components/create_button.html' %}
 {% endblock %}
